# bookmarker

./: Cargo.toml  LICENSE-MIT  README.md
extension/bookmarker/: bookmarker.js  manifest.json
extension/bookmarker/popup/: bookmark_actions.css  bookmark_actions.html  bookmarker.js
features/: bookmarks.feature
migrations/2020-03-31-125852_create_units/: up.sql
migrations/2020-05-08-151451_create_bookmarks/: down.sql  up.sql
src/: errors.rs  main.rs
src/database/: bookmark.rs  mod.rs  schema.rs  unit.rs
src/graphql/: mod.rs  mutation.rs  query.rs  schema.rs  subscription.rs
src/models/: unit.rs
