[package]
name = "bookmarker"
version = "0.1.0"
authors = ["projektir <oprojektir@gmail.com>"]
edition = "2018"

[dependencies]
warp = "0.2.2"
http = "0.2.1"

tokio = { version = "0.2.16", features = ["macros"] }

diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "r2d2", "chrono", "serde_json"] }
diesel_migrations = "1.4.0"

r2d2 = "0.8.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4.11", features = ["serde"] }

juniper = { git = "https://github.com/graphql-rust/juniper" }
juniper_warp = { git = "https://github.com/graphql-rust/juniper", features = ["subscriptions"] }
juniper_subscriptions = { git = "https://github.com/graphql-rust/juniper" }
futures = "0.3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4.8"
env_logger = "0.7.1"
structopt = "0.3.12"

thiserror = "1.0.14"
