[package]
name = "bookmarker"
version = "0.1.0"
authors = ["projektir <oprojektir@gmail.com>"]
edition = "2018"

[dependencies]
warp = "0.2.3"
http = "0.2.1"

tokio = { version = "1.8.4", features = ["macros"] }

diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "serde_json"] }
diesel_migrations = "1.4.0"

r2d2 = "0.8.8"
chrono = { version = "0.4.11", features = ["serde"] }

juniper = { git = "https://github.com/graphql-rust/juniper" }
juniper_warp = { git = "https://github.com/graphql-rust/juniper", features = ["subscriptions"] }
juniper_subscriptions = { git = "https://github.com/graphql-rust/juniper" }
futures = "0.3.5"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"

log = "0.4.8"
env_logger = "0.7.1"
structopt = "0.3.14"

thiserror = "1.0.18"
